--- a/MySafeSpace/Info.plist
+++ b/MySafeSpace/Info.plist
@@ -21,5 +21,27 @@
 			</array>
 		</dict>
 	</dict>
+    
+    <key>CFBundleURLTypes</key>
+    <array>
+      <dict>
+      <key>CFBundleURLSchemes</key>
+      <array>
+        <string>fb370356241711334</string>
+      </array>
+      </dict>
+    </array>
+    <key>FacebookAppID</key>
+    <string>370356241711334</string>
+    <key>FacebookClientToken</key>
+    <string>82965897681fc51af184ce170869f833</string>
+    <key>FacebookDisplayName</key>
+    <string>MySafeSpace</string>
+    
+    <key>LSApplicationQueriesSchemes</key>
+    <array>
+      <string>fbapi</string>
+      <string>fb-messenger-share-api</string>
+    </array>
 </dict>
 </plist>
